[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/fonts/FFFFORWA.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/terrain/TravellerJournal.gd" type="Script" id=2]
[ext_resource path="res://assets/terrain/hub_level/traveller_journal.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/UI/quiticon.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/book_textbox.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 43.8902, 49.2892 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 4 )

[node name="TravellerJournal" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.448471, 1.83575 )
shape = SubResource( 1 )

[node name="Label" type="RichTextLabel" parent="."]
margin_left = -115.979
margin_top = -108.878
margin_right = 118.021
margin_bottom = -54.8775
custom_fonts/bold_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[b]Journal[/b][img=40]res://assets/UI/icon_E.png[/img]"
text = "Journal"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plaque" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Plaque"]
anchor_left = 0.5
anchor_top = 0.33
anchor_right = 0.5
anchor_bottom = 0.33
margin_left = -540.0
margin_top = -237.6
margin_right = 534.0
margin_bottom = 484.4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Plaque/Control"]
anchor_left = 0.518
anchor_top = 0.321
anchor_right = 0.518
anchor_bottom = 0.321
margin_left = -436.332
margin_top = -81.762
margin_right = 435.668
margin_bottom = 455.238
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="RichTextLabel" parent="Plaque/Control/NinePatchRect"]
margin_left = 75.4712
margin_top = 52.0
margin_right = 820.471
margin_bottom = 100.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "======== [color=red]Traveller's Journal[/color] ========"
text = "======== Traveller's Journal ========"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="Plaque/Control/NinePatchRect"]
margin_left = 75.4712
margin_top = 98.0
margin_right = 796.471
margin_bottom = 180.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "This is where you record your travels and the journal will be updated as you achieve more things."
text = "This is where you record your travels and the journal will be updated as you achieve more things."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KillCount" type="Label" parent="Plaque/Control/NinePatchRect"]
margin_left = 263.0
margin_top = 180.0
margin_right = 615.0
margin_bottom = 230.0
custom_colors/font_color = Color( 0, 0.266667, 0.709804, 1 )
custom_fonts/font = SubResource( 5 )
text = "Kill Count: "
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenedChests" type="Label" parent="Plaque/Control/NinePatchRect"]
margin_left = 263.0
margin_top = 227.0
margin_right = 615.0
margin_bottom = 277.0
custom_colors/font_color = Color( 0, 0.266667, 0.709804, 1 )
custom_fonts/font = SubResource( 5 )
text = "Chests Opened:"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="Plaque/Control/NinePatchRect"]
margin_left = 796.471
margin_top = 7.6884
margin_right = 836.471
margin_bottom = 47.6884
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="pressed" from="Plaque/Control/NinePatchRect/CloseButton" to="." method="_on_CloseButton_pressed"]
